--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@pushprotocol/restapi": "^0.0.4",
+    "@pushprotocol/socket": "^0.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,8 +23,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.3",
-    "@pushprotocol/restapi": "^0.0.4"
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
