--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.3",
     "ethers": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
